Domain redirection and site rename

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
 .center.hero-unit
   .section
     %h2 Welcome
-    %p.tight Convo is the quickest way to video chat.
+    %p.tight= "#{app_name} is the quickest way to video chat." 
     %small No signing up.  No logins.  Just share a link to get started.
 
   %h3 Get Started Now
