--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,7 +2,7 @@
   .navbar-inner
     .container
       .brand
-        = link_to "Convo", '/', id: "logo"
+        = link_to app_name, '/', id: "logo"
       %nav
         %ul.nav.pull-right
           %li= link_to "Home",    '/'
