Made video layout a tiny bit nicer

--- a/app/assets/stylesheets/rooms.css.scss
+++ b/app/assets/stylesheets/rooms.css.scss
@@ -7,3 +7,14 @@
   position: relative;
   top: 2px;
 }
+
+#published {
+  float: right
+}
+
+// large incoming videos
+.video-stream {
+  margin: 10px;
+  float: left
+
+}
