--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,3 +7,7 @@
         %ul.nav.pull-right
           %li= link_to "Home",    '/'
           %li= link_to "Help",    '#'
+          - if current_user
+            %li= link_to "Sign Out" #, destroy_user_session_path, method: :delete
+          - else
+            %li= link_to "Sign In" #, new_user_session_path
