--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#hero-image{
+  margin-left: 35px;
+  height: 250px;
+  border:2px solid #d1d1d1;
+  border-radius: 10px;
+  padding: 4px;
+  background: white
+}
+
+.blah{
+  float: left
+}
