--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -26,6 +26,19 @@
         %p.notice= notice
       - if alert
         %p.alert= alert
+
+      :javascript
+        window.loginPrompt = new LP();
+        // $(document).on(LP.constants.eventAfterLoginStateChange, function(e, loginState) {
+        //   if (loginState === LP.constants.loginStateLoggedIn) {
+        //     window.location.reload();
+        //   }
+        // });
+    
+        $(document).ready(function() {
+          window.loginPrompt.init('.loginPrompt');
+        });
+
       = yield
 
     - if Rails.env.development?
@@ -37,12 +50,3 @@
     /   ['Last Name', 'last_name']
     / ]);
 
-    :javascript
-      window.loginPrompt = new LP();
-      / $(document).on(LP.constants.eventAfterLoginStateChange, function(e, loginState) {
-      /   if (loginState === LP.constants.loginStateLoggedIn) {
-      /     window.location.reload();
-      /   }
-      / });
-  
-      window.loginPrompt.init('.loginPrompt');
