--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,14 +8,6 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    / .alert 
-    /   Hi. We've noticed you're using an ad blocker. This site is ad-supported. If you like our content would you mind donating a small amount?
-    /   .btn.btn-info donate here
-    /   %a more info
-
-    / %script{:src => "/assets/jquery.js?body=1", :type => "text/javascript"}
-    /%script{:src => "http://demo.loginprompt.com/jquery.cookie.js", :type => "text/javascript"}
-    / %script{:src => "http://demo.loginprompt.com/lp-client.js", :type => "text/javascript"}
 
     %script{:src => "http://localhost:3000/jquery.cookie.js", :type => "text/javascript"}
     %script{:src => "http://localhost:3000/lp-client.js", :type => "text/javascript"}
@@ -28,7 +20,7 @@
         %p.alert= alert
 
       :javascript
-        window.loginPrompt = new LP();
+        window.loginPrompt = new LP('507c4b060a967c2f2e000001');
         // $(document).on(LP.constants.eventAfterLoginStateChange, function(e, loginState) {
         //   if (loginState === LP.constants.loginStateLoggedIn) {
         //     window.location.reload();
@@ -42,11 +34,5 @@
       = yield
 
     - if Rails.env.development?
-      = JSON.parse(cookies['LP-auth']) if cookies['LP-auth'].present?
-      = current_user.inspect
-
-    / window.loginPrompt.addUserRegistrationFields([
-    /   ['First Name', 'first_name', new RegExp('[A-Za-z].*')],
-    /   ['Last Name', 'last_name']
-    / ]);
-
+      = debug JSON.parse(cookies['LP-auth']) if cookies['LP-auth'].present?
+      = debug(current_user) 
