--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,6 +8,6 @@
           %li= link_to "Home",    '/'
           %li= link_to "Help",    '#'
           - if current_user
-            %li= link_to "Sign Out"#, destroy_user_session_path, method: :delete
+            %li= link_to "Sign Out", {}, class: "LP-logout"#, destroy_user_session_path, method: :delete
           - else
             %li= link_to "Sign In", home_login_path
