use lp-client classes to create forms

--- a/app/views/home/register.html.haml
+++ b/app/views/home/register.html.haml
@@ -1,7 +1,2 @@
 %h3= "Please Register"
-#registerForm
-
-:javascript
-  var form = new LP.UIFunctions.FormDefinitions.UserRegistration(window.loginPrompt.UI);
-  window.loginPrompt.UI.insertForm($('#registerForm'), form);
-
+.LP-user-registration-form
