--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -27,6 +27,7 @@
           window.loginPrompt = new LP('507c4b060a967c2f2e000001');
       -else
         :javascript
+          window.LP.constants.urlBase='https://demodemo.loginprompt.com';
           window.loginPrompt = new LP('507dc578d8dc770200000001');
           // $(document).on(LP.constants.eventAfterLoginStateChange, function(e, loginState) {
           //   if (loginState === LP.constants.loginStateLoggedIn) {
