--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -12,7 +12,7 @@
     - if Rails.env.development?
       %script{:src => "http://localhost:3000/lp-client.js", :type => "text/javascript"}
     - else
-      %script{:src => "https://demo.loginprompt.com/lp-client.js", :type => "text/javascript"}
+      %script{:src => "https://demodemo.loginprompt.com/lp-client.js", :type => "text/javascript"}
 
     = render 'layouts/header'
     .container
