--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -12,7 +12,7 @@
     - if Rails.env.development?
       %script{:src => "http://localhost:3000/lp-client.js", :type => "text/javascript"}
     - else
-      %script{:src => "https://demodemo.loginprompt.com/lp-client.js", :type => "text/javascript"}
+      %script{:src => "https://demo.loginprompt.com/lp-client.js", :type => "text/javascript"}
 
     = render 'layouts/header'
     .container
@@ -27,7 +27,6 @@
           window.loginPrompt = new LP('507c4b060a967c2f2e000001');
       -else
         :javascript
-          window.LP.constants.urlBase='https://demodemo.loginprompt.com';
           window.loginPrompt = new LP('507dc578d8dc770200000001');
           // $(document).on(LP.constants.eventAfterLoginStateChange, function(e, loginState) {
           //   if (loginState === LP.constants.loginStateLoggedIn) {
