--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,4 +11,5 @@
             %li= link_to "Hi #{current_user.name}", {} if signed_in?
             %li= link_to "Sign Out", {}, class: "LP-logout"#, destroy_user_session_path, method: :delete
           - else
-            %li= link_to "Sign In", home_login_path
+            %li= link_to "Sign Up", home_register_path
+            %li= link_to "Log In", home_login_path
